# vitaldb-arrhythmia-ml

./: .gitignore  FLUJO_TECNICO.md  README.md  environment.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
docs/: project_streamlit_app.md
frontend/: app.py  requirements.txt
models/: README.md  decision_tree_best_pipeline.joblib  feature_columns.json  linear_svc_best_pipeline.joblib  mlp_best_pipeline.joblib  model_artifacts_metadata.json  tabular_best_model_metadata.json
notebooks/: 01_download_and_structure.ipynb  02_eda_annotations.ipynb  03_ecg_loading_and_visualization.ipynb  03b_waveform_quality_eda.ipynb  04_windowing_and_feature_engineering.ipynb  05_baseline_modeling.ipynb  06_full_modeling_hyperparameter_search.ipynb  06_tabular_modeling_hyperparameter_search.ipynb
reports/: MODELING_REPORT.md  NEXT_STEPS_FOR_CHATGPT.md  PROJECT_REPORT.md  TABULAR_MODELING_REPORT.md
scripts/: 01_audit_filtered_tabular_dataset.py  01_download_all_available_ecg.py  02_build_features_all_windows.py  02_build_filtered_tabular_modeling_dataset.py  03_run_hyperparameter_search.py  03_run_tabular_binary_hyperparameter_search_FIXED.py  03_run_tabular_hyperparameter_search.py  04_prepare_streamlit_artifacts.py  04_run_benchmark_tabular.py  05_select_binary_demo_cases.py  05_train_autoencoder_anomaly.py  06_diagnose_autoencoder_pipeline.py  06_prepare_selected_demo_npy.py  07_audit_streamlit_deploy.py
src/: __init__.py  config.py  data_loading.py  download.py  evaluation.py  features.py  modeling.py  pipeline.py  preprocessing.py  search.py  utils.py  (+2 more)
(+79 files in other folders)
