[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vitaldb-arrhythmia-ml"
version = "0.1.0"
description = "Exploratory ML pipeline for ECG rhythm classification using the VitalDB Arrhythmia Database."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["ecg", "arrhythmia", "vitaldb", "machine-learning", "physionet"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "scipy",
    "tqdm",
    "vitaldb",
    "xgboost",
    "imbalanced-learn",
    "joblib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "jupyter",
    "ipykernel",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
